# langchain-academy

./: .gitignore  Dockerfile  ai_companion.ipynb  docker-compose.yml  overrides.json  process_notebooks.py  pyproject.toml
module-0/: basics.ipynb
module-1/: agent-memory_cb.ipynb  agent_cb.ipynb  chain-cb.ipynb  deployment_cb.ipynb  router_cb.ipynb  simple-graph.ipynb  simple-graph_cb.ipynb
module-2/: chatbot-external-memory_cb.ipynb  chatbot-summarization_cb.ipynb  multiple-schemas_cb.ipynb  state-reducers_cb.ipynb  state-schema_cb.ipynb  trim-filter-messages_cb.ipynb
module-3/: breakpoints_cb.ipynb  dynamic-breakpoints_cb.ipynb  edit-state-human-feedback_cb.ipynb  streaming-interruption_cb.ipynb  time-travel_cb.ipynb
module-3/studio/: agent.py
module-4/: map-reduce_cb.ipynb  parallelization_cb.ipynb  research-assistant_cb.ipynb  research-assistant_palantir_v_sf.ipynb  sub-graph_cb.ipynb
module-5/: memory_agent.ipynb  memory_agent_cb.ipynb  memory_store_cb.ipynb  memoryschema_collection_cb.ipynb  memoryschema_profile.ipynb  memoryschema_profile_cb.ipynb
module-5/studio/: configuration.py
module-6/: assistant_cb.ipynb  connecting.ipynb  connecting_cb.ipynb  creating.ipynb  creating_cb.ipynb  double-texting_cb.ipynb
