[project]
name = "langchain-academy"
version = "0.1.0"
description = "environment for langchain-academy"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "langchain-community>=0.4",
    "langchain-core>=1.0.0",
    "langchain-openai>=1.0.1",
    "langchain-tavily>=0.2.12",
    "langgraph>=1.0.1",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "langgraph-cli[inmem]>=0.4.4",
    "langgraph-prebuilt>=1.0.1",
    "langgraph-sdk>=0.2.9",
    "langsmith>=0.4.37",
    "notebook>=7.4.7",
    "trustcall>=0.0.39",
    "wikipedia>=1.4.0",
]
